--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     justify-content: space-between;
     background: linear-gradient(2deg, #abc2ff, #0205a7);
     color: white;
-    padding: 15px;
+    padding: 7px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -33,6 +33,7 @@ body {
 }
 .logo img {
     height: 40px;
+    padding-left: 4px;
 }
 .menu-toggle {
     display: none;
@@ -184,7 +185,7 @@ h2 {
 }
 
 form input {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
@@ -304,4 +305,42 @@ p a:hover {
     width: 100%;
     height: 100%;
     border: none;
+}
+
+
+/* Contact Page */
+#submit-btn {
+    background: linear-gradient(180deg, #abc2ff, #0205a7);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+}
+
+#submit-btn:hover {
+    background: linear-gradient(170deg, #000000, #0205a7);;
+}
+.dark-mode #submit-btn {
+    background: linear-gradient(170deg, #000000, #0205a7);
+}
+.dark-mode #submit-btn:hover {
+    background: linear-gradient(180deg, #abc2ff, #0205a7);
+}
+/* Rating Stars */
+.rating span {
+    font-size: 30px;
+    cursor: pointer;
+    color: grey;
+}
+
+.rating .selected {
+    color: gold;
+}
+
+/* Success Message */
+.success-animation {
+    color: green;
+    font-size: 24px;
 }
